haskell/katari-compiler/test/golden/expected/03-undefined-name.diagnostics.txt
error[K0102]: undefined name 'unknown_function'
  --> test/golden/cases/03-undefined-name.ktr (2:3)
  |
2 |   unknown_function()
  |   ^^^^^^^^^^^^^^^^
